--- a/laravel.conf
+++ b/laravel.conf
@@ -3,9 +3,9 @@ upstream backend {
     # no load balancing method is specified for Round Robin
     #ip_hash;
     server php1:9000 max_fails=3 fail_timeout=30s;
-    server php2:9000 max_fails=3 fail_timeout=30s;
-    server php3:9000 max_fails=3 fail_timeout=30s;
-    
+    #server php2:9000 max_fails=3 fail_timeout=30s;
+    #server php3:9000 max_fails=3 fail_timeout=30s;
+
     #server app-2.dennys_development-network:8002 max_fails=3 fail_timeout=30s;
     # server app-3:8003 max_fails=3 fail_timeout=30s;
 }
